<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.dicegame.gamePlayFragement">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gamebackground3">

        <TextView
            android:id="@+id/computerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/computer_score"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/computerScoreValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreText"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/computerScoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="96dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/computerText"
            app:layout_constraintTop_toBottomOf="@+id/yourScroreValue"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/yourScroreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="63dp"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/yourScoreText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" />

        <TextView
            android:id="@+id/yourScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="176dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/your_score"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/computerText"
            app:layout_constraintEnd_toStartOf="@+id/yourScroreValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="140dp"
            android:layout_marginBottom="5dp"
            android:text="@string/player_dices"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/computerText"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/pd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />


            <ImageView
                android:id="@+id/pd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />


            <ImageView
                android:id="@+id/pd3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />

            <ImageView
                android:id="@+id/pd4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />

            <ImageView
                android:id="@+id/pd5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="34dp"
            android:layout_marginEnd="120dp"

            android:layout_marginBottom="6dp"
            android:text="@string/computer_dices"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/cd1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />

            <ImageView
                android:id="@+id/cd2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />


            <ImageView
                android:id="@+id/cd3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />


            <ImageView
                android:id="@+id/cd4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />

            <ImageView
                android:id="@+id/cd5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playerdiceimage"
                android:src="@drawable/dice_1" />


        </LinearLayout>

        <EditText
            android:id="@+id/editWinningScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="27dp"
            android:shadowColor="#F48FB1"
            android:text="@string/_101"
            android:textColor="#FFFFFF"
            android:textColorHint="#F48FB1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/Score"
            app:layout_constraintEnd_toStartOf="@+id/setwinScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/Score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="91dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="112dp"
            android:backgroundTint="@color/material_dynamic_tertiary10"
            android:text="@string/score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shuffle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/topScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="43dp"
            android:text=""
            android:textSize="24dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/Score"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="91dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="112dp"
            android:backgroundTint="@color/material_dynamic_tertiary10"
            android:text="@string/shuffle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Score"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/setwinScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="82dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="@color/material_dynamic_tertiary10"
            android:text="@string/set_win_score"
            app:layout_constraintBottom_toTopOf="@+id/shuffle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editWinningScore"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/totalWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="141dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="142dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/asset"
            android:text="@string/player_0_computer_0"
            android:textColor="#FF80AB"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/yourScoreText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>